--- a/diabetes_dt_AK_Sugar_fast.ipynb
+++ b/diabetes_dt_AK_Sugar_fast.ipynb
@@ -61,7 +61,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "411a8729-c8e0-49f4-8c7c-99f8c09d77f2"
+        "outputId": "5c4e07af-9d07-476b-9c32-3b3ee6c18882"
       },
       "source": [
         "# Read TrainingWiDS2021 data and UnlabeledWiDS2021 data into pandas in two DataFrames\r\n",
@@ -96,8 +96,6 @@
       },
       "source": [
         "### **Exploratory Data Analysis (EDA**)\r\n",
-        "Missing Data Analysis. Explore missing values in R, with \r\n",
-        "\r\n",
         "*   Missing Data Analysis. Explore missing values in R, with mice. See https://github.com/areeratk/Diabetes_Mellitus/blob/main/diabetes_eda_Areerat.ipynb for discussion on recommended variables for dropping.\r\n",
         "*   Exploring the data further in Pandas Profiling. See https://github.com/areeratk/Diabetes_Mellitus/blob/main/diabetes_eda_Areerat2.ipynb for discussion on dropping highly correlated variables among the predictors.\r\n",
         "\r\n",
@@ -112,7 +110,7 @@
           "height": 499
         },
         "id": "Gpt9YxzEjgld",
-        "outputId": "f8704937-0eba-4e8e-c67b-339e38c7dbcf"
+        "outputId": "5830faa1-a51d-4110-f00e-16edd0cfdfad"
       },
       "source": [
         "#Further data exploration on the worksheet dataframe, df\r\n",
@@ -1226,7 +1224,7 @@
           "height": 499
         },
         "id": "PHFBvFReW_II",
-        "outputId": "27a2abad-ae13-4486-b3e3-5f5ee1f1ea8e"
+        "outputId": "f640ba05-e581-4548-94fc-4ba85653ecb8"
       },
       "source": [
         "#Prepare the predicting dataframe, testing_df, following the same procedure describe in the immidiate cell above\r\n",
@@ -2458,7 +2456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z9oJepj_24Uw",
-        "outputId": "dd87f6fe-f434-401a-85a1-482bec843a9a"
+        "outputId": "2560df14-490a-4de8-eb4a-25ac4083edd5"
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\r\n",
@@ -2472,7 +2470,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8201700471214916"
+              "0.8205285802089736"
             ]
           },
           "metadata": {
@@ -2489,7 +2487,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yEMpSntzO0jY",
-        "outputId": "475e2de1-e4c3-4840-aa1f-02870a34e9eb"
+        "outputId": "6a5201ec-d1cc-4306-b623-82d8b6a7e3be"
       },
       "source": [
         "# Calculate classification report\r\n",
@@ -2504,7 +2502,7 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.84      0.94      0.89     30616\n",
+            "           0       0.84      0.95      0.89     30616\n",
             "           1       0.65      0.37      0.47      8432\n",
             "\n",
             "    accuracy                           0.82     39048\n",
@@ -2523,7 +2521,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VPvqCwUu26Yz",
-        "outputId": "4bc775c0-09af-4131-f401-f1981ea96ec0"
+        "outputId": "e142dfdb-f0fb-4d61-bd6f-314aef18f49a"
       },
       "source": [
         "#Sort the features by their importance\r\n",
@@ -2535,30 +2533,30 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[(0.1741820674715027, 'd1_glucose_max'),\n",
-              " (0.06349876005833784, 'bmi_calculated'),\n",
-              " (0.05804437464319498, 'h1_glucose_max'),\n",
-              " (0.04487184330724684, 'd1_bun_max'),\n",
-              " (0.042826417640587235, 'age'),\n",
-              " (0.04056811484029115, 'heart_rate_apache'),\n",
-              " (0.03773387909294989, 'd1_platelets_max'),\n",
-              " (0.03750241638203082, 'apache_3j_diagnosis'),\n",
-              " (0.037394214452117006, 'map_apache'),\n",
-              " (0.037252344175117434, 'd1_heartrate_diff'),\n",
-              " (0.03701612100870165, 'd1_sysbp_diff'),\n",
-              " (0.035622584937864084, 'd1_diasbp_diff'),\n",
-              " (0.03499836618047446, 'd1_mbp_diff'),\n",
-              " (0.03425550822728288, 'resprate_apache'),\n",
-              " (0.03288915769186431, 'd1_resprate_max'),\n",
-              " (0.032341838997554766, 'd1_temp_diff'),\n",
-              " (0.032217410371244586, 'temp_apache'),\n",
-              " (0.031500333009466794, 'd1_potassium_min'),\n",
-              " (0.03088717780181334, 'apache_2_diagnosis'),\n",
-              " (0.030246085031577965, 'd1_spo2_diff'),\n",
-              " (0.02873146578460201, 'd1_sodium_min'),\n",
-              " (0.027858263130554495, 'd1_hco3_max'),\n",
-              " (0.020431145978060714, 'gcs_sum'),\n",
-              " (0.01713010978556216, 'd1_calcium_diff')]"
+              "[(0.17300937417803156, 'd1_glucose_max'),\n",
+              " (0.06411480877870541, 'bmi_calculated'),\n",
+              " (0.058027843157943605, 'h1_glucose_max'),\n",
+              " (0.04459985893498656, 'd1_bun_max'),\n",
+              " (0.043070455356747354, 'age'),\n",
+              " (0.04051867205320513, 'heart_rate_apache'),\n",
+              " (0.03763651997686868, 'apache_3j_diagnosis'),\n",
+              " (0.03754545179162651, 'map_apache'),\n",
+              " (0.03753996570850406, 'd1_platelets_max'),\n",
+              " (0.03744176327121081, 'd1_heartrate_diff'),\n",
+              " (0.03717210769900556, 'd1_sysbp_diff'),\n",
+              " (0.03554220123279837, 'd1_diasbp_diff'),\n",
+              " (0.03465967866404248, 'd1_mbp_diff'),\n",
+              " (0.03407300262375103, 'resprate_apache'),\n",
+              " (0.03274751744897238, 'd1_resprate_max'),\n",
+              " (0.032587534307971476, 'temp_apache'),\n",
+              " (0.032289080450084606, 'd1_temp_diff'),\n",
+              " (0.031552791313225435, 'apache_2_diagnosis'),\n",
+              " (0.03128584893775316, 'd1_potassium_min'),\n",
+              " (0.030413124395133235, 'd1_spo2_diff'),\n",
+              " (0.028714175991381218, 'd1_sodium_min'),\n",
+              " (0.027858768710272742, 'd1_hco3_max'),\n",
+              " (0.020421156835792743, 'gcs_sum'),\n",
+              " (0.017178298181985886, 'd1_calcium_diff')]"
             ]
           },
           "metadata": {
@@ -2575,18 +2573,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XvghGwrhf8PT",
-        "outputId": "f85da962-5afc-41b8-c277-017a4ad68fec"
+        "outputId": "a3ef4409-5040-4a2e-8890-d179e99decac"
       },
       "source": [
         "# Probabilities for each class\r\n",
-        "#rf_probs = rf.predict_proba(Xt)[:, 1]\r\n",
         "rf_probs = rf.predict_proba(X_test)[:, 1]\r\n",
         "\r\n",
         "from sklearn.metrics import roc_auc_score\r\n",
-        "#roc_auc_score(test_df[TARGET_COL], rf_probs)\r\n",
         "roc_auc_score(y_pred, rf_probs)"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2598,7 +2594,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -2610,7 +2606,7 @@
           "height": 301
         },
         "id": "tn2WuWOVf-PH",
-        "outputId": "917296f4-846b-4beb-ecd0-99d503fd5add"
+        "outputId": "4047603c-db8f-47b1-b8b2-dde28d098eea"
       },
       "source": [
         "from sklearn.metrics import roc_curve\r\n",
@@ -2631,7 +2627,7 @@
         "plt.legend(loc=\"lower right\")\r\n",
         "plt.savefig('rf_y_pred.png')"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2656,7 +2652,7 @@
           "height": 459
         },
         "id": "qJyAzdKnZZlQ",
-        "outputId": "b35d87e0-586e-42cf-9a0c-7df58b6786af"
+        "outputId": "6facf303-9c25-430e-96b6-30c74e23411d"
       },
       "source": [
         "#Use the RandomForest classifiers above to determine whether patients have a type of diabetes\r\n",
@@ -2666,7 +2662,7 @@
         "#Read the predicting results\r\n",
         "test_df[[\"encounter_id\",\"diabetes_mellitus\"]]"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2775,7 +2771,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -2788,7 +2784,7 @@
         "#Save the RandomForest predicting results in a csv submission file\r\n",
         "test_df[[\"encounter_id\",\"diabetes_mellitus\"]].to_csv(\"submission_AK_Sugar_fast.csv\",index=False)"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2798,7 +2794,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "is8FDPDrLTsy",
-        "outputId": "a43d4a2a-acb2-41d8-bd1b-e516721f94a2"
+        "outputId": "d44a640b-0f56-4340-e4b3-8414317b67e6"
       },
       "source": [
         "# Probabilities for each predicting class\r\n",
@@ -2807,7 +2803,7 @@
         "from sklearn.metrics import roc_auc_score\r\n",
         "roc_auc_score(test_df[TARGET_COL], rf_probs1)"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2819,7 +2815,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -2831,7 +2827,7 @@
           "height": 301
         },
         "id": "-wrVwLiDaw_7",
-        "outputId": "5e7a5fa8-b01e-4a99-eaad-03428e1afc9e"
+        "outputId": "e4e43c41-fe94-40b7-cc0f-c8e94035643e"
       },
       "source": [
         "from sklearn.metrics import roc_curve\r\n",
@@ -2852,7 +2848,7 @@
         "plt.legend(loc=\"lower right\")\r\n",
         "plt.savefig('rf_y_target.png')"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2877,7 +2873,7 @@
           "height": 1000
         },
         "id": "6KoxRLQBt_OK",
-        "outputId": "7ef7876a-a365-418a-aa5f-0f57cf7ef022"
+        "outputId": "c76dc640-1d34-425a-9b0c-bb4ade125c73"
       },
       "source": [
         "#Decision tree appoach to further observe explanatory ability of selected features \r\n",
@@ -2913,7 +2909,7 @@
         "img.save('decision_tree_AK_Sugar_fast.png')\r\n",
         "PImage(\"decision_tree_AK_Sugar_fast.png\", height=2000, width=1900)"
       ],
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2930,7 +2926,7 @@
               "height": 2000
             }
           },
-          "execution_count": 17
+          "execution_count": 19
         }
       ]
     },
@@ -2941,13 +2937,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VJnLshcp43vc",
-        "outputId": "80e15be0-14e8-4c1a-a58a-fa9c431fb431"
+        "outputId": "bbaa2d8f-4176-4ffb-e9e7-b9341984aa51"
       },
       "source": [
         "# The Decision Tree Model Accuracy, how often is the classifier correct?\r\n",
         "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred_dt))"
       ],
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -2965,14 +2961,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PqXr28On5CX8",
-        "outputId": "552a7821-cdb1-407d-9df3-41eee6d7024a"
+        "outputId": "3f9dcb12-868f-46dd-b912-e6169783c279"
       },
       "source": [
         "# Calculate classification report from the Decision Tree Approach\r\n",
         "from sklearn.metrics import classification_report\r\n",
         "print(classification_report(y_test, y_pred_dt))"
       ],
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2998,7 +2994,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vpiROMdVheeT",
-        "outputId": "b10560f8-0e0d-41cf-9a20-0fe2b1a96121"
+        "outputId": "84343218-3513-4466-c573-692ede42bb1b"
       },
       "source": [
         "# Probabilities for each class\r\n",
@@ -3006,7 +3002,7 @@
         "\r\n",
         "roc_auc_score(y_pred_dt, dt_probs)"
       ],
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3018,7 +3014,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 22
         }
       ]
     },
@@ -3030,7 +3026,7 @@
           "height": 301
         },
         "id": "d_NZZq06h29y",
-        "outputId": "0ab376f5-c228-41ad-9d21-b5b2d5a414bb"
+        "outputId": "8b01d91d-40df-4b27-86ff-d3aadec32cac"
       },
       "source": [
         "from sklearn.metrics import roc_curve\r\n",
@@ -3051,7 +3047,7 @@
         "plt.legend(loc=\"lower right\")\r\n",
         "plt.savefig('dt_y_pred_dt.png')"
       ],
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3076,7 +3072,7 @@
           "height": 459
         },
         "id": "ScQClb15-u4T",
-        "outputId": "f3be069e-77b9-4f18-c718-8cac41a25e3b"
+        "outputId": "e6eba8a5-8307-4b0e-a51b-dc4229cc30ff"
       },
       "source": [
         "#Use the decision tree classifiers above to determine whether patients have a type of diabetes\r\n",
@@ -3086,7 +3082,7 @@
         "#Read the predicting results\r\n",
         "test_df[[\"encounter_id\",\"diabetes_mellitus\"]]"
       ],
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3195,7 +3191,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
@@ -3208,7 +3204,7 @@
         "#Save the predicting results in a csv submission file\r\n",
         "test_df[[\"encounter_id\",\"diabetes_mellitus\"]].to_csv(\"submission_AK_Sugar_fast2.csv\",index=False)"
       ],
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -3218,7 +3214,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "haGJELxDTHyr",
-        "outputId": "88cbe8cb-2820-4b4c-b37c-00c566cafaa1"
+        "outputId": "213301fb-844b-458f-8c16-9f382bed1d00"
       },
       "source": [
         "# Probabilities for each class\r\n",
@@ -3226,7 +3222,7 @@
         "\r\n",
         "roc_auc_score(test_df[TARGET_COL], dt_probs1)"
       ],
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3238,7 +3234,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 26
         }
       ]
     },
@@ -3250,7 +3246,7 @@
           "height": 301
         },
         "id": "iQj_a3nCY-1Z",
-        "outputId": "01f22375-a50c-4e46-8fb2-0507eac09c59"
+        "outputId": "15feab52-9809-4c5f-9603-37d657d409d7"
       },
       "source": [
         "from sklearn.metrics import roc_curve\r\n",
@@ -3271,7 +3267,7 @@
         "plt.legend(loc=\"lower right\")\r\n",
         "plt.savefig('dt_y_target.png')"
       ],
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3299,7 +3295,7 @@
         "\r\n",
         "*   The RandomForest model serves feature fine-tunning purposes.  By nature, it also is helpful in alleviating overfitting issues.\r\n",
         "*   The RandomForest model has slightly higher accuracy (about 1%) as compared to the Decision Tree approach.\r\n",
-        "*   Looking at the classification reports, we see that RandomForest has higher precision and thus higher proportion of predictions that class 1 are true. DecisionTree, however, provides higher recall and thus higher proportion of the true positives of class 1 that are identified as such. DecisionTree also has higher f-1 score for class 1 which is a useful reference when the two classes are imbalance.*   \r\n",
+        "*   Looking at the classification reports, we see that RandomForest has higher precision and thus higher proportion of predictions that class 1 are true. DecisionTree, however, provides higher recall and thus higher proportion of the true positives of class 1 that are identified as such. DecisionTree also has higher f-1 score for class 1 which is a useful reference when the two classes are imbalance.   \r\n",
         "*   The Decision Tree approach also has slightly higher auc-roc score when performing on the predicting dataframe. \r\n",
         "*   The Decision Tree approach is selected to create classifiers to determine whether patients have diabetes because it performs better in identifying true positives of class 1 since providing diabetes treatment to false positives would lead to more mulfunctions.  \r\n",
         "*   The Decision Tree approach helps us further see where elses we may look when common determinants mystify us in trade-offs of possible overfitting and bias. These possibilities are likely low given close measures of their performances after our heavy feature fine-tunning."
